--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/x-icon" href="/Fermentation.ico" />
+    <link rel="apple-touch-icon" href="/Fermentation.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>빵 발효 타이머</title>
   </head>
