feat: Supabase 푸시 알림 시스템 추가
- PWA 설정 (manifest.json, sw.js)
- Supabase 클라이언트 및 푸시 훅 구현
- Edge Function (send-push) 연동
- VAPID 키 기반 Web Push 지원

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/Fermentation.ico" />
     <link rel="apple-touch-icon" href="/Fermentation.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#8B4513" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>빵 발효 타이머</title>
   </head>
